Add reset and calculate grade extra feature

--- a/public/calculator.html
+++ b/public/calculator.html
@@ -58,10 +58,17 @@
                         </tr>
                     </table>
                     
+                    <button id="reset">RESET</button>
+                    <br>
+                    
                     <h3>Result</h3>
-                    <p id="result"></p>
+                    <p id="result"><br></p>
                     <button id="mean">MEAN</button>
                     <button id="weighted">WEIGHTED</button>
+                    <br><br>
+                    <h3>Grade</h3>
+                    <p id="grade"><br></p>
+                    <button id="calculate">CALCULATE</button>
                 </div>
             </div>
             <div id="footer"></div>
